<?xml version="1.0"?>
<package format="2">
  <name>mecademic_pydriver</name>
  <version>0.0.0</version>
  <description>The mecademic_pydriver package</description>

  <maintainer email="support@mecademic.com">Mecademic</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Mecademic/ROS/tree/master/catkin_ws/src/mecademic_robot_node</url>

  <author email="support@mecademic.com">Mecademic</author>
  <author email="marco.costanzo@unicampania.it">Marco Costanzo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
