<?xml version="1.0"?>
<package format="2">
  <name>mecademic_pydriver</name>
  <version>0.0.1</version>
  <description>The mecademic_pydriver package</description>

  <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/marcocostanzo/mecademic_pydriver</url>

  <author email="support@mecademic.com">Mecademic</author>
  <author email="marco.costanzo@unicampania.it">Marco Costanzo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
